[package]
name = "source_nanny"
version = "0.0.2"
authors = ["aberrantwolf"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {git = "https://github.com/clap-rs/clap"}
lazy_static = "*"
regex = "1"
ansi_term = "0.12"
